--- a/11_11/index.html
+++ b/11_11/index.html
@@ -46,7 +46,7 @@
         Details: tonight's opening is BYOB with free water while supplies last. If driving, park well away from the rendezvous point. Once inside, DO NOT share the exact location. Those coming directly to the door and not observing the meeting point protocol will be turned away, for our security. When leaving, do not congregate outside. Move a few blocks away before lingering or calling a ride. No bathrooms on premises. There will be no re-entry at tonight's event. Masks recommended. Come ready to immerse.
       </p>
       <p>
-        <div style='padding:50px; margin:auto;'><img src="../images/map.jpg" style="max-width:350px;"  /> </div>
+        <div style='padding:50px; margin:auto;'><img src="./11_11.jpg" style="max-width:350px;"  /> </div>
       </p>
       <p style="text-align:center; margin:50px;">
         &gt; &gt; &gt; FLD_WRK &lt; &lt; &lt;
