--- a/back2school/index.html
+++ b/back2school/index.html
@@ -49,7 +49,7 @@
       <p>
       Once you have arrived at X, within 10 minutes, a FLDWRK x AFSM committee member will reveal themselves and escort 4-6 people at a time to the site.
       </p>
-      <div style='padding:50px; margin:auto;'><img src="../images/map2.png" style="max-width:350px;"  /> </div>
+      <div style='padding:50px; margin:auto;'><img src="./back2school.png" style="max-width:350px;"  /> </div>
       <p style="text-align:center; margin:50px;">
         &gt; &gt; &gt; FLD_WRK &lt; &lt; &lt;
       </p>
