--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
 <tr>
   <td>
+    <a href="space/index.html">
     space
+  </a>
   </td>
 
   <td>
@@ -118,11 +120,13 @@
 
 <tr>
   <td colspan="3">
-    <img src="images/stencil_abbrev.jpg" />
-
+    <div style="text-align:center">
+    <img src="images/stencil_abbrev.jpg" style="max-width: 1000px; margin: auto;" />
+    </div>
+    <p>
     The "Field" is anywhere "outside the laboratory," i.e. beyond controlled environments of scripted and thinly imagined experience.
     In the Field, a more authentic engagement with space and people becomes possible.
-    <br/>
+    </p>
     <br/>FLDWRK is not for profit.
     <br/>FLDWRK is anti-commodification. 
     <br/>FLDWRK is not a brand.
@@ -182,15 +186,7 @@
 
 
 <tr>
-  <td>
-    <img src="images/banner.jpg" style="filter:none; padding:auto;"/>
-    Src: anonymous
-  </td>
-</tr>
-
-
-<tr>
-  <td colspan="3">
+  <td colspan="1">
     Illicit Placemaking - The art and practice of creating social, artistic, and environmental conditions out of spaces, especially found, neglected, or liminal spaces, and especially when that condition is unexpected, deviant, or creative. 
     Places may include: shopping malls, tunnels, waterfalls, astronomical observatories, soil factories, railyards, badlands, garages, warehouses, etc.
     Conditions may include raving, creating and sharing works of visual, sonic, performance or other art, and celebrating community.
@@ -205,9 +201,8 @@
   </td>
   <td>
     <a href="eyeblind/index.html">
-    <img src="images/eyeblind.jpg" />
+    <img src="images/justice.jpg" />
     </a>
-    The blindfold || a symbol of anti-surveillance, cipherpunk ethos, privacy, merging of the ego, and collective identity
   </td>
 </tr>
 
