--- a/tool/index.html
+++ b/tool/index.html
@@ -4,7 +4,7 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=browser-width, initial-scale=1'>
   <meta property="og:image" content="images/fldwrk.jpg" />
-  <title>rare</title>
+  <title>tool</title>
   
   <!-- Stylesheets -->
   <link href='../index.css' rel='stylesheet' type='text/css'/>
@@ -21,7 +21,6 @@
 <tr>
   <td style="text-align:center">
       <a href="../index.html"><img src="../images/fldwrk.jpg" style="width:100px;"  /> </a>
-      <!-- <a href="../index.html"><img src="../images/stencil_full.jpg" style="width:200px; float:right;"  /> </a> -->
   </td>
 </tr>
 
