--- a/audio/index.html
+++ b/audio/index.html
@@ -4,11 +4,10 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=browser-width, initial-scale=1'>
   <meta property="og:image" content="images/fldwrk.jpg" />
-  <title>tool</title>
+  <title>audio</title>
   
   <!-- Stylesheets -->
   <link href='../index.css' rel='stylesheet' type='text/css'/>
-  <link href='./tool.css' rel='stylesheet' type='text/css'/>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300" rel="stylesheet">
@@ -19,18 +18,49 @@
 <table>
 
 <tr>
-  <td style="text-align:center">
+  <td colspan="3">
       <a href="../index.html"><img src="../images/fldwrk.jpg" style="width:100px;"  /> </a>
+      <a href="../index.html"><img src="../images/stencil_full.jpg" style="width:200px; float:right;"  /> </a>
   </td>
 </tr>
 
 <tr>
+  <td style="background-color:dimgray">
+    <h1>AUDIO</h1>
+  </td>
+
   <td>
-    <div style="display:flex; justify-content:center; align-items:center;">
-      <div>...</div>
-    </div>
+    
+  </td>
+
+  <td>
+    
   </td>
 </tr>
+
+<tr>
+  <td colspan="3">
+    <h3 style="text-align: center;">
+      --{ Field Recordings }--
+    </h3>
+  </td>
+</tr>
+
+
+<tr>
+  <td>
+    <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fdj_garbaage%2Ffldwrk-x-afsm-live-set%2F" frameborder="0" ></iframe>  
+  </td>
+
+  <td>
+    <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Freefer%2Ffldwrk-2322%2F" frameborder="0" ></iframe>
+  </td>
+
+  <td>
+
+  </td>
+</tr>
+
 
 </table>
 
