--- a/geo/index.html
+++ b/geo/index.html
@@ -4,7 +4,7 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=browser-width, initial-scale=1'>
   <meta property="og:image" content="images/fldwrk.jpg" />
-  <title>space</title>
+  <title>geo</title>
   
   <!-- Stylesheets -->
   <link href='../index.css' rel='stylesheet' type='text/css'/>
@@ -26,7 +26,7 @@
 
 <tr>
   <td style="background-color:dimgray">
-    <h1>SPACE</h1>
+    <h1>GEO</h1>
   </td>
 
   <td>
