--- a/index.html
+++ b/index.html
@@ -26,33 +26,35 @@
 
 <tr>
   <td>
-    <a href="library/index.html">
+    <a href="lib/index.html">
       lib
     </a>
   </td>
 
   <td>
-    rare
+    artfkt
   </td>
 
   <td>
-    artfkt
+    cipher
   </td>
 </tr>
 
 <tr>
   <td>
-    <a href="space/index.html">
-    space
-  </a>
+    <a href="geo/index.html">
+      geo
+    </a>
   </td>
 
   <td>
-    audio
+    <a href="audio/index.html">
+      audio
+    </a>
   </td>
 
   <td>
-    geo
+    tool
   </td>
 </tr>
 
