--- a/lib/index.html
+++ b/lib/index.html
@@ -128,6 +128,27 @@
     </ul>
 </tr>
 
+
+<tr>
+  <td>
+    <ul>
+      <a href="http://library.nothingness.org/articles/SI/en/display/313">
+        [Link]
+      </a>
+      <li>Title: Preliminary Problems in Constructing a Situation</li>
+      <li>Author: SI, 1958</li>
+    </ul>
+  </td>
+
+  <td>
+
+  </td>
+
+  <td>
+    
+  </td>
+</tr>
+
 </table>
 
 
