--- a/audio/index.html
+++ b/audio/index.html
@@ -63,11 +63,8 @@
 
 
 <tr>
-  <td colspan="2">
-    <iframe width="100%" height="120" src="https://www.youtube.com/embed/bYxXFUnTlfY?si=fVdgQLpHeMLwNdYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-  </td>
-  <td>
-  
+  <td colspan="3">
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/bYxXFUnTlfY?si=fVdgQLpHeMLwNdYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
   </td>
 </tr>
 
