lib & anon edits

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <img src="images/philadelphiamap.jpg" />
   </td>
   <td>
-    <a href="eyeblind/index.html">
+    <a href="anon/index.html">
     <img src="images/justice.jpg" />
     </a>
   </td>
