--- a/lib/index.html
+++ b/lib/index.html
@@ -28,21 +28,14 @@
   <td style="background-color:dimgray">
     <h1>LIB</h1>
   Community Resources
-  Subversive Reading
-  Tool Repository
+  & Subversive Reading
   </td>
 
   <td>
-    <h3>Rates</h3>
-    Property of FLDWRK always free 
+    <h3>Tool Library</h3>
+    <a href="./pr0p3rty.html">Property*</a> of FLDWRK 
     <br/>
-    Deposits all negotiable & always refundable
-    <br/>
-    Other rates set by donors 
-    <br/>
-    Donations welcomed 
-    <br/>
-    
+    loaned upon request
   </td>
 
   <td>
