--- a/index.html
+++ b/index.html
@@ -62,19 +62,18 @@
   <td style="background-color:dimgray">
     <h1>EVENT</h1>
 
-    <!-- <button data-tally-open="mRM4Lv" data-tally-width="460px"> -->
     <button>
-      <a href="">
+      <a href="lib/m4n1f35t0.html">
         RAVE
       </a>
     </button>
-    <p>Saturday June 13 21:00</p>
-    <p>Philadelphia, Pennsylvania</p>
+    <p>Friday November 29 20:29</p>
+    <p>Copenhagen, Denmark</p>
     <p></p>
 
     <p id="clock"></p>
     <script>
-    var countDownDate = new Date("June 13, 2024 21:00:00").getTime();
+    var countDownDate = new Date("November 29, 2024 20:29:00").getTime();
     var x = setInterval(function() {
       var now = new Date().getTime();
       var distance = countDownDate - now;
