--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
   </td>
 
   <td>
-    <h3>Open Call</h3>
-    Send comments, art, and project proposals to <a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>
+    Note: @fld_wrk (IG) is compromised
     <br/>
     <br/>
     
@@ -110,11 +109,8 @@
 
   <td>
     <h3>Contact</h3>
-    <ul>
-      <li>e-mail {<a href="mailto:fldwrk@pm.me">fldwrk@pm.me</a>}</li>
-      <li>instagram {<a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>}</li> 
-      <li>word-of-mouth {<a href="https://iwillnotbeconsumed.wordpress.com/guerilla-art-practices-and-impact/">?</a>}</li>
-    </ul>
+      Digital contacts have been compromised by bad-faith actors.
+      To reach fldwrk, {<a href="https://iwillnotbeconsumed.wordpress.com/guerilla-art-practices-and-impact/">ask a friend</a>} in the scene.
   </td>
 </tr>
 
