--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
   </td>
 
   <td>
-    Note: @fld_wrk (IG) is compromised
+    <h3>Open Call</h3>
+    Send research proposals to <a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>
     <br/>
     <br/>
     
@@ -109,8 +110,12 @@
 
   <td>
     <h3>Contact</h3>
-      Digital contacts have been compromised by bad-faith actors.
-      To reach fldwrk, {<a href="https://iwillnotbeconsumed.wordpress.com/guerilla-art-practices-and-impact/">ask a friend</a>} in the scene.
+    <ul>
+      <li>e-mail {<a href="mailto:fldwrk@pm.me">fldwrk@pm.me</a>}</li>
+      <li>mastodon {<a href="https://mastodon.social/@fieldwork">@fieldwork</a>}</li>
+      <li>instagram {<a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>}</li> 
+      <li>word-of-mouth {<a href="https://iwillnotbeconsumed.wordpress.com/guerilla-art-practices-and-impact/">...</a>}</li>
+    </ul>
   </td>
 </tr>
 
@@ -124,14 +129,13 @@
     The "Field" is anywhere "outside the laboratory," i.e. beyond controlled environments of scripted and thinly imagined experience.
     In the Field, a more authentic engagement with space and people becomes possible.
     </p>
-    <br/>FLDWRK is not for profit.
-    <br/>FLDWRK is anti-commodification. 
-    <br/>FLDWRK is not a brand.
+    <br/>FLDWRK is never twice in the same place.
+    <br/>FLDWRK is always free.
     <br/>
     <ol>
       <li>Foregiveness over permission</li>
       <li>Quality over quantity</li>
-      <li>Innovation over perfection</li>
+      <li>Change over stagnation</li>
     </ol>
   </td>
 </tr>
@@ -139,11 +143,11 @@
 
 <tr>  
   <td colspan="1">
-    FLDWRK is :: 
-    found spaces - open movement - deconstructed work - shared scene - placemaker - platform - tool
+    FLDWRK // research unit
+    found spaces - open movement - platform - tool
     <br>
     </br>
-    WE are here to preserve DIY culture, resist power, protect place, broaden access, and increase freedom.
+    To preserve DIY culture, resist power, protect place, broaden access, and increase freedom.
   </td>
 
   <td colspan="2" rowspan="2">
@@ -248,9 +252,6 @@
 
 <!-- JQuery -->
 <script src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous'></script>
-
-<!-- Form (Tally) -->
-<script async src="https://tally.so/widgets/embed.js"></script>
 
 </body>
 </html>
